force-app/main/default/objects/Care_Plan_Action__c/Care_Plan_Action__c.object-meta.xml
<CustomObject>
    <description>Action item belonging to a care plan.</description>
    <label>Care Plan Action</label>
    <nameField>
        <label>Care Plan Action Number</label>
        <displayFormat>CPA-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Plan Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>