force-app/main/default/objects/Care_Plan_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Type of action required under the care plan.</description>
    <label>Action Type</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Review Assessment</fullName>
            </value>
            <value>
                <fullName>Housing Change</fullName>
            </value>
            <value>
                <fullName>Clinical Review</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Enrichment</fullName>
            </value>
            <value>
                <fullName>Behaviour Plan</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>