force-app/main/default/objects/Care_Plan_Action__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <description>User assigned to complete the action.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Care Plan Actions</relationshipLabel>
    <relationshipName>Care_Plan_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>