force-app/main/default/objects/Care_Plan_Action__c/fields/Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan__c</fullName>
    <description>Care plan that owns the action item.</description>
    <label>Care Plan</label>
    <referenceTo>Care_Plan__c</referenceTo>
    <relationshipLabel>Care Plan Actions</relationshipLabel>
    <relationshipName>Care_Plan_Actions</relationshipName>
    <type>MasterDetail</type>
</CustomField>