force-app/main/default/objects/Care_Plan_Action__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <description>Timestamp when the action was marked completed.</description>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>