force-app/main/default/objects/Care_Plan_Action__c/fields/Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Completion_Notes__c</fullName>
    <description
  >Completion notes captured when the action is closed.</description>
    <label>Completion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>