force-app/main/default/objects/Care_Plan_Action__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date by which the action should be completed.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>