force-app/main/default/objects/Care_Plan_Action__c/validationRules/A360_Completed_Action_Requires_Notes.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Completed actions require completion notes.</description>
    <errorConditionFormula
  >AND(ISPICKVAL(Status__c, &quot;Completed&quot;), ISBLANK(Completion_Notes__c))</errorConditionFormula>
    <errorMessage
  >Enter completion notes before marking the action completed.</errorMessage>
    <fullName>A360_Completed_Action_Requires_Notes</fullName>
</ValidationRule>